Web Inspector: Crash when adding a keyframes rule in the Styles pane https://bugs.webkit.org/show_bug.cgi?id=99826

Reviewed by Pavel Feldman.

Source/WebCore:

The client-supplied selector text is first parsed to make sure it results in a valid style rule selector.

Test: inspector/styles/add-new-rule-invalid-selector.html

* inspector/InspectorStyleSheet.cpp:
(WebCore::createCSSParser):
(WebCore):
(WebCore::InspectorStyle::setPropertyText):
(WebCore::checkStyleRuleSelector):
(WebCore::InspectorStyleSheet::addRule):
(WebCore::InspectorStyleSheet::ensureSourceData):
(WebCore::InspectorStyleSheetForInlineStyle::getStyleAttributeRanges):

LayoutTests:

* inspector/styles/add-new-rule-invalid-selector-expected.txt: Added.
* inspector/styles/add-new-rule-invalid-selector.html: Added.


Canonical link: https://commits.webkit.org/118148@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@132229 268f45cc-cd09-0410-ab3c-d52691b4dbfc